--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
             const contractAddress = "0x7506C12a824d73D9b08564d5Afc22c949434755e"; // replace with your contract address
 
-            const contract = new window.ethereum.eth.Contract(contractABI, contractAddress);
+            const contract = new web3.eth.Contract(contractABI, contractAddress);
             contract.methods.depositToken(sponsor, token, amount).send({ from: ethereum.selectedAddress });
         } else {
             alert("MetaMask is not detected!");
