--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
     </style>
 </head>
 
-<body onload="getAPIResult()">
 
     <body onload="getAPIResult()">
 
@@ -57,6 +56,7 @@
     </div>
 
     <script src="https://c0f4f41c-2f55-4863-921b-sdk-docs.github.io/cdn/metamask-sdk.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
     <script>
        const MMSDK = new MetaMaskSDK.MetaMaskSDK()
     // Because init process of the MetaMaskSDK is async.
